--- a/MyPlaces/app/src/main/AndroidManifest.xml
+++ b/MyPlaces/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MyPlacesList"></activity>
+        <activity android:name=".ViewMyPlaceActivity"></activity>
+        <activity android:name=".EditMyPlaceActvity" />
+        <activity android:name=".MyPlacesList" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
@@ -23,7 +25,7 @@
         <activity
             android:name=".About"
             android:label="About"
-            android:theme="@style/Theme.AppCompat.Light.Dialog"></activity>
+            android:theme="@style/Theme.AppCompat.Light.Dialog" />
     </application>
 
 </manifest>
