--- a/MyPlaces/app/build.gradle
+++ b/MyPlaces/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+//added for firebase
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -32,6 +34,10 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.2.1'
     implementation 'androidx.navigation:navigation-ui:2.2.1'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
+
+    //added for firebase
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
+    implementation 'com.google.firebase:firebase-database:19.3.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
