--- a/MyPlaces/app/build.gradle
+++ b/MyPlaces/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     //added for firebase
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.3.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
